--- a/mail/components/im/themes/chat.css
+++ b/mail/components/im/themes/chat.css
@@ -603,6 +603,12 @@ imgroup[closed] .twisty {
   min-width: 40px;
 }
 
+#statusTypeIcon > .toolbarbutton-icon {
+  /* Required for hidpi */
+  width: 16px;
+  padding: 0;
+}
+
 /* show the status icon also in text mode */
 toolbar[mode="text"] #statusTypeIcon > .toolbarbutton-icon {
   display: -moz-box;
