Bug 1409567 - Increase vertical size of conversation items to make them reasonable click targets, r=clokep.

--- a/mail/components/im/themes/chat.css
+++ b/mail/components/im/themes/chat.css
@@ -584,6 +584,10 @@ imgroup[closed] .twisty {
 %endif
 %endif
 
+.prplBuddyIcon {
+  margin: 2px 0;
+}
+
 #searchResultConv > .prplBuddyIcon > .protoIcon {
 %ifdef XP_MACOSX
   list-style-image: url("chrome://global/skin/icons/search-textbox.png");
