--- a/mail/themes/windows/mail/mailWindow1.css
+++ b/mail/themes/windows/mail/mailWindow1.css
@@ -698,25 +698,25 @@ treechildren::-moz-tree-cell-text(imapdeleted) {
        (-moz-os-version: windows-win8) and (-moz-windows-default-theme) {
   @media (-moz-windows-compositor) {
     :root:not(:-moz-lwtheme) {
-      --tabs-border: rgba(10%, 10%, 10%, .4);
+      --tabs-border: var(--glassShadowColor);
     }
 
     #messengerWindow[sizemode=normal] #tabpanelcontainer {
-      border: 1px solid rgba(10%, 10%, 10%, .4);
+      border: 1px solid var(--glassShadowColor);
       border-top: none;
       background-clip: padding-box;
     }
 
     #messengerWindow[sizemode=normal] #mail-toolbar-menubar2 {
-      border-right: 1px solid rgba(10%, 10%, 10%, .4);
-      border-left: 1px solid rgba(10%, 10%, 10%, .4);
+      border-right: 1px solid var(--glassShadowColor);
+      border-left: 1px solid var(--glassShadowColor);
       background-clip: padding-box;
     }
 
     #messengerWindow[sizemode=normal] statusbar {
       -moz-appearance: none;
       margin-top: -1px;
-      border: 1px solid rgba(10%, 10%, 10%, .4);
+      border: 1px solid var(--glassShadowColor);
       border-top-color: threedshadow;
       border-radius: 1px 1px 0 0;
       background-clip: padding-box;
