Bug 1410745 - Fix spacing between attachment items in attachment bucket. r=jorgk

--- a/mail/themes/linux/mail/compose/messengercompose.css
+++ b/mail/themes/linux/mail/compose/messengercompose.css
@@ -19,6 +19,10 @@
   box-shadow: 0 0 2px Highlight inset, 0 0 2px Highlight inset;
 }
 
+#attachmentBucket > scrollbox > .scrollbox-innerbox {
+  padding: 1px;
+}
+
 #compose-toolbox {
   -moz-appearance: none;
   background-color: var(--toolbar-bgcolor);
