--- a/mail/themes/windows/mail/compose/messengercompose.css
+++ b/mail/themes/windows/mail/compose/messengercompose.css
@@ -24,6 +24,10 @@
   box-shadow: 0 0 1px Highlight inset, 0 0 1px Highlight inset;
 }
 
+#attachmentBucket > scrollbox > .scrollbox-innerbox {
+  padding: 1px;
+}
+
 /* ::::: special toolbar colors ::::: */
 
 #composeContentBox {
