--- a/mail/themes/linux/mail/searchBox.css
+++ b/mail/themes/linux/mail/searchBox.css
@@ -8,8 +8,16 @@
   padding-top: 1px;
 }
 
+.searchBox > .autocomplete-textbox-container > hbox {
+  -moz-box-ordinal-group: 1;
+}
+
+.searchBox > .autocomplete-textbox-container > .textbox-input-box {
+  -moz-box-ordinal-group: 2;
+}
+
+.gloda-search-icon,
 .textbox-search-icon[searchbutton],
-.searchBox > .autocomplete-textbox-container > .autocomplete-icon,
 textbox:not([searchbutton]) > .textbox-input-box > .textbox-search-sign {
   list-style-image: url(chrome://messenger/skin/icons/search-glass.svg);
   -moz-context-properties: fill;
