--- a/mail/themes/shared/mail/tabmail.css
+++ b/mail/themes/shared/mail/tabmail.css
@@ -12,7 +12,7 @@
 }
 
 #tabs-toolbar {
-  background-image: linear-gradient(to top, var(--tabs-border) 1px,
+  background-image: linear-gradient(to top, var(--tabs-border-color) 1px,
                     transparent 1px);
 }
 
@@ -123,7 +123,7 @@
 }
 
 .tab-background[selected=true] {
-  border-top-color: var(--tabs-border);
+  border-top-color: var(--tabs-border-color);
   background-color: var(--toolbar-bgcolor);
   background-image: var(--toolbar-bgimage);
   background-repeat: repeat-x;
@@ -212,7 +212,7 @@
 .tabmail-tab[visuallyselected]::before,
 .tabmail-tab[visuallyselected]:last-child::after,
 .tabmail-tab[visuallyselected] + .tabmail-tab::before {
-  border-color: var(--tabs-border);
+  border-color: var(--tabs-border-color);
   margin-top: 0;
   margin-bottom: var(--tab-toolbar-overlap);
   opacity: 1;
