Bug 1414544 - Fix the in-content prefs after landing of the XBL compat hack (bug 1374247). r=jorgk CLOSED TREE

--- a/mail/themes/linux/mail/preferences/aboutPreferences.css
+++ b/mail/themes/linux/mail/preferences/aboutPreferences.css
@@ -10,16 +10,12 @@ window * {
   font-size: 1.11rem;
 }
 
-caption > label:not(.dialogTitle) {
+caption label:not(.dialogTitle) {
   font-size: 1.27rem;
 }
 
 checkbox {
   -moz-binding: url("chrome://global/content/bindings/checkbox.xml#checkbox") !important;
-}
-
-radio {
-  -moz-binding: url("chrome://global/content/bindings/radio.xml#radio") !important;
 }
 
 spinbuttons {
