Bug 1409897 - Replace (0/n) next to IRC channels with a badge for targeted messages, r=nhnt11.

--- a/mail/components/im/content/chat.css
+++ b/mail/components/im/content/chat.css
@@ -19,6 +19,7 @@ imcontact {
 .startChatBubble, .closeConversationButton {
   cursor: pointer;
   -moz-user-focus: ignore;
+  color: initial;
   display: none;
 }
 
