Bug 1443618 - Stop using the windowdragbox element in pageInfo.xul (port bug 1442961 to SM). r=frg

--- a/suite/themes/classic/mac/navigator/pageInfo.css
+++ b/suite/themes/classic/mac/navigator/pageInfo.css
@@ -9,7 +9,8 @@
   height: 530px !important;
 }
 
-windowdragbox {
+#dragbox {
+  -moz-window-dragging: drag;
   min-height: 20px;
   -moz-appearance: toolbar;
   -moz-box-align: center;
