Bug 1448808 - Implement legacy overlay loader for WebExtensions. r=darktrojan
MozReview-Commit-ID: 5Ke6q3bZK8Z

--- a/mail/base/content/extensionsOverlay.css
+++ b/mail/base/content/extensionsOverlay.css
@@ -11,3 +11,7 @@
 #nav-header {
   height: 50px;
 }
+
+.addon[status="installed"] {
+  -moz-binding: url("chrome://messenger/content/extensions.xml#thunderbird-addon-generic");
+}
